Added c1m1 as an example map, built folder structure Also some template updates

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -10,6 +10,7 @@
 	"maxs" "[x y z]"
 	"initialstate" "1"
 	"BlockType" "[n]"
+	"mapupdate" "1"
 }
 ; --- With angles
 {
@@ -22,6 +23,7 @@
 	"boxmaxs" "[x y z]"
 	"initialstate" "1"
 	"BlockType" "[n]"
+	"mapupdate" "1"
 }
 
 ; ######################  ITEMS  ######################
@@ -58,7 +60,7 @@ modify:
 		"spawnflags" "2"
 	}
 }
-; --- Weapon Spawns
+; --- Weapon Spawns - Any weapon type/Standard spawn
 {
 	"classname" "weapon_spawn"
 	"origin" "[x y z]"
@@ -70,12 +72,21 @@ modify:
 	"spawnflags" "2"
 	"count" "5"
 }
-; --- Single Pickup Weapons
+; --- Weapon Spawns - Single weapon pickup
+{
+	"classname" "[weapon type]_spawn"
+	"origin" "1681 5767 2667"
+	"angles" "-83 90 -90"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
+; --- Single Pickup Weapon Only - Not recommended for primary weapons, but does not absorb dropped weapons
 {
 	"classname" "[weapon type]"
 	"origin" "[x y z]"
 	"angles" "[p y r]"
-	"ammo" "[reserve ammo]"
 }
 ; --- Melee Weapons
 {
@@ -104,3 +115,10 @@ modify:
 	"normal.z" "[z.00]"
 	"team" "2"
 }
+
+; ####################  I/O LOGIC  ####################
+; --- Template for modifying entity input/output logic
+; --- All parameters
+"[Output named]" "[Target entities named][Via this input][Parameter override][Delay in seconds][Trigger only once]"
+; --- No parameter override, no delay, allow triggering more than once (default)
+"[Output named]" "[Target entities named][Via this input]0-1"
