--- a/_Templates/stripper_template.cfg
+++ b/_Templates/stripper_template.cfg
@@ -76,7 +76,7 @@
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
 ; =====================================================
-; ==                   STATIC PROPS                  ==
+; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 
@@ -110,8 +110,8 @@
 ; =====================================================
 
 ; =====================================================
-; ==                 TRIGGER REMOVAL                 ==
-; ==   Remove triggers that interfere with gameplay  ==
+; ==              TRIGGER REMOVAL / FIX              ==
+; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
 
 
