Completed work on c1m2 Adjusted templates Moved pill cabinet tweak to global filters

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -13,6 +13,8 @@
 	"mapupdate" "1"
 }
 ; --- With angles
+; --- Values from the rotation (CTRL + M) menu in hammer are shifted by 1 place: Hammer -> Stripper
+; --- X -> R  /  Y -> P  /  Z -> Y
 {
 	"classname" "env_physics_blocker"
 	"origin" "[x y z]"
@@ -122,3 +124,18 @@ modify:
 "[Output named]" "[Target entities named][Via this input][Parameter override][Delay in seconds][Trigger only once]"
 ; --- No parameter override, no delay, allow triggering more than once (default)
 "[Output named]" "[Target entities named][Via this input]0-1"
+
+; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
+; --- as they are spawned after the map is loaded they need to remove after a delay
+; --- Use info_gamemode to do this on a delay after the map has loaded, and to specify the desired gamemode
+modify:
+{
+	match:
+	{
+		"classname" "info_gamemode"
+	}
+	insert:
+	{
+		"OnVersusPostIO" "[Entity targetname or classname]Kill10-1"
+	}
+}
