Completed initial work on c1m3 Added SG552 to the gun store on c1m2

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -144,7 +144,7 @@ add:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Replace one of the silenced SMGs in the gun store with an MP5
+; --- Replace a silenced SMGs in the gun store with an MP5
 modify:
 {
 	match:
@@ -156,6 +156,18 @@ modify:
 		"classname" "weapon_smg_mp5_spawn"
 	}
 }
+; --- Replace a desert rifle in the gun store with an SG552
+{
+	match:
+	{
+		"hammerid" "1864980"
+	}
+	replace:
+	{
+		"classname" "weapon_rifle_sg552_spawn"
+	}
+}
+
 ; --- Add the alternative skins for various weapons to the gun store
 ; --- TLS already added the tier 1 shotgun variants
 ; --- Silenced SMG
