Completed initial work on c1m4 Moved pill cabinet on c1m3 Remove the hunting rifle replacement section from the template Added saferoom info in preparation for rework Fixed weapon spawn issues on c1m1 - standard weapon_spawn entities cannot be single pickup in versus Modified template for weapon spawns

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -63,6 +63,7 @@ modify:
 	}
 }
 ; --- Weapon Spawns - Any weapon type/Standard spawn
+; --- NOTE: Count value does not affect versus - weapons are always infinite
 {
 	"classname" "weapon_spawn"
 	"origin" "[x y z]"
@@ -74,17 +75,8 @@ modify:
 	"spawnflags" "2"
 	"count" "5"
 }
-; --- Weapon Spawns - Single weapon pickup
-{
-	"classname" "[weapon type]_spawn"
-	"origin" "1681 5767 2667"
-	"angles" "-83 90 -90"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "1"
-}
-; --- Single Pickup Weapon Only - Not recommended for primary weapons, but does not absorb dropped weapons
+; --- Single Pickup Weapon Only
+; --- NOTE: CAN be used for single pickup weapons in versus
 {
 	"classname" "[weapon type]"
 	"origin" "[x y z]"
