--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -167,6 +167,38 @@ modify:
 		"classname" "weapon_rifle_sg552_spawn"
 	}
 }
+; --- Replace the lower T2 sniper spawns in the gun store with CS snipers
+modify:
+{
+	match:
+	{
+		"hammerid" "1845975"
+	}
+	replace:
+	{
+		"classname" "weapon_sniper_scout_spawn"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "1865872"
+	}
+	replace:
+	{
+		"classname" "weapon_sniper_scout_spawn"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "1865762"
+	}
+	replace:
+	{
+		"classname" "weapon_sniper_awp_spawn"
+	}
+}
 
 ; --- Add the alternative skins for various weapons to the gun store
 ; --- TLS already added the tier 1 shotgun variants
@@ -290,43 +322,6 @@ add:
 	"count" "10"
 	"skin" "2"
 	"weaponskin" "2"
-}
-
-; =====================================================
-; ==            HUNTING RIFLE REPLACEMENT            ==
-; ==   Remove or turn sniper spawns into ammo piles  ==
-; =====================================================
-; --- Replace the lower T2 sniper spawns in the gun store with CS snipers
-modify:
-{
-	match:
-	{
-		"hammerid" "1845975"
-	}
-	replace:
-	{
-		"classname" "weapon_sniper_scout_spawn"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "1865872"
-	}
-	replace:
-	{
-		"classname" "weapon_sniper_scout_spawn"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "1865762"
-	}
-	replace:
-	{
-		"classname" "weapon_sniper_awp_spawn"
-	}
 }
 
 ; =====================================================
@@ -865,15 +860,15 @@ add:
 	"rendercolor" "255 255 255"
 }
 ; --- Billboard by the walkway
-{
-	"classname" "prop_dynamic"
-	"origin" "-4815 30 357"
-	"angles" "0 315 0"
-	"model" "models/props_signs/raisedbillboard.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendercolor" "255 255 255"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-4815 30 357"
+;	"angles" "0 315 0"
+;	"model" "models/props_signs/raisedbillboard.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;	"rendercolor" "255 255 255"
+;}
 ; --- Crashed bus after the event
 {
 	"classname" "prop_dynamic"
