--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -190,11 +190,19 @@ filter:
 {
 	"hammerid" "8442701"
 }
-
-; =====================================================
-; ==            HUNTING RIFLE REPLACEMENT            ==
-; ==   Remove or turn sniper spawns into ammo piles  ==
-; =====================================================
+; --- Move the pill cabinet on the lower route to the other side of the wall
+modify:
+{
+	match:
+	{
+		"hammerid" "354455"
+	}
+	replace:
+	{
+		"origin" "880 -2457 0.224243"
+		"angles" "0 180 0"
+	}
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
