--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -13,6 +13,40 @@
 ; ==             TANK SPAWN MODIFICATION             ==
 ; ==        Add or modify tank spawns position       ==
 ; =====================================================
+; --- Spawn tank at 29 seconds (just as the elevator opens) - This freezes the finale while giving teams a chance complete the elevator attack
+modify:
+{
+	match:
+	{
+		"targetname" "button_elev_3rdfloor"
+	}
+	insert:
+	{
+		"OnPressed" "pre_event_tankSpawnZombie29-1"
+		"OnPressed" "tank_wrongwayEnable28-1"
+	}
+}
+add:
+{
+	"classname" "info_zombie_spawn"
+	"origin" "-2478 -4847 545"
+	"angles" "0 180 0"
+	"population" "tank"
+	"offer_tank" "1"
+	"targetname" "pre_event_tank"
+}
+; --- Wrong way sign since we can't fix the angle the tank spawns facing towards
+{
+	"classname" "prop_dynamic"
+	"origin" "-2371 -4844 545"
+	"angles" "0 180 0"
+	"model" "models/props_placeable/wrong_way.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"targetname" "tank_wrongway"
+	"StartDisabled" "1"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -57,6 +91,198 @@
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+add:
+; --- Block gas cans from ending up in unreachable locations - This also blocks players
+; --- Lower Floor
+; --- Re-opening Construction
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2576 4352 212"
+	"mins" "-208 -128 -20"
+	"maxs" "208 128 20"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Georgia Pork Barrel
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3682 -4436 196"
+	"mins" "-322 -44 -36"
+	"maxs" "322 44 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Taco Bucket
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4256 -4464 196"
+	"mins" "-176 -16 -36"
+	"maxs" "176 16 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Wok on the Wild Side
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4832 -4444 196"
+	"mins" "-320 -36 -36"
+	"maxs" "320 36 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Empty Storefront
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5536 -3312 196"
+	"mins" "-320 -48 -36"
+	"maxs" "320 48 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Potato Safari
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3344 -3284 196"
+	"mins" "-172 -20 -36"
+	"maxs" "172 20 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Beef Boy Stew
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2736 3283 196"
+	"mins" "-176 -19 -36"
+	"maxs" "176 19 36"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Middle Floor - Scaffolding can be used to reach some of them, so they aren't blocked
+; --- Re-opening Construction
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2640 -4336 478"
+	"mins" "-272 -144 -10"
+	"maxs" "272 144 10"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2464 -3873 478"
+	"mins" "-96 -319 -10"
+	"maxs" "96 319 10"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Lady Shoes
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4992 -4472 464"
+	"mins" "-176 -8 -24"
+	"maxs" "176 8 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Unmarked Corner
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6012 -3300 464"
+	"mins" "-172 -36 -24"
+	"maxs" "172 36 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6324 -3388 480"
+	"mins" "-140 -124 -8"
+	"maxs" "140 124 8"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Under Construction Storefront #1
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5419 -3316 384"
+	"mins" "-235 -52 -104"
+	"maxs" "235 52 104"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Under Construction Storefront #2
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3373 -3312 472"
+	"mins" "-301 -48 -16"
+	"maxs" "301 48 16"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Upper Floor
+; --- Guardian Sports Source
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3636 -4456 720"
+	"mins" "-320 -24 -24"
+	"maxs" "320 24 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3636 -4416 720"
+	"mins" "-288 -16 -24"
+	"maxs" "288 16 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Fauntletroy's
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4179 -4438 720"
+	"mins" "-177 -42 -24"
+	"maxs" "177 42 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Empty Storefront
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4836 -4464 721"
+	"mins" "-321 -16 -24"
+	"maxs" "321 16 24"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
+; --- Unmarked Corner
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6247 -3354 736"
+	"mins" "-175 -134 -3"
+	"maxs" "175 134 3"
+	"initialstate" "1"
+	"BlockType" "4"
+	"mapupdate" "1"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
