--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -33,24 +33,16 @@ modify:
 ; ==    Saferoom item spawns - ammo piles, weapons   ==
 ; =====================================================
 add:
-; --- Tier 1 weapons in saferoom
+; --- Single pickup tier 1 weapons in saferoom
 {
-	"classname" "weapon_smg_silenced_spawn"
+	"classname" "weapon_smg_silenced"
 	"origin" "423 5512 2895"
 	"angles" "0 236.5 84"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "1"
 }
 {
-	"classname" "weapon_shotgun_chrome_spawn"
-	"origin" "442 5480 2861"
-	"angles" "-81 180 90"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "1"
+	"classname" "weapon_shotgun_chrome"
+	"origin" "444 5480 2861"
+	"angles" "-76.7195 199.715 70.0679"
 }
 
 ; =====================================================
@@ -64,30 +56,16 @@ add:
 	"origin" "675 5683 2699"
 	"angles" "0 150 90"
 }
-; --- Additional tier 1 weapons on the cleaning cart at the end of the first hallway
 {
-	"classname" "weapon_smg_spawn"
+	"classname" "weapon_smg"
 	"origin" "1679 5813 2699"
 	"angles" "0 287.5 84"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "1"
 }
 {
-	"classname" "weapon_pumpshotgun_spawn"
-	"origin" "1681 5767 2667"
-	"angles" "-83 90 -90"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "1"
+	"classname" "weapon_pumpshotgun"
+	"origin" "1681 5765 2667"
+	"angles" "-80.826 60.7614 -60.5252"
 }
-
-; =====================================================
-; ==            HUNTING RIFLE REPLACEMENT            ==
-; ==   Remove or turn sniper spawns into ammo piles  ==
-; =====================================================
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
@@ -130,7 +108,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 	"mapupdate" "1"
-	"targetname" "anv_mapfixes_test"
 }
 ; --- Block skipping the first floor from the balconies left of the saferoom exit
 {
