Completed initial work on c2m1 Updated Dead Center mapinfo Updated some additions that didnt match the current template as they were taken from unreleased ZM 2.0 changes

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -731,95 +731,106 @@ modify:
 add:
 ; --- Improved clipping on car stops in the event area
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6266 -1171 407"
 	"mins" "-8 -49.5 -4.6"
 	"maxs" "8 49.5 4.6"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6268 -1354 397"
 	"mins" "-6 -50 -4.6"
 	"maxs" "6 50 4.6"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6266 -1682 388"
 	"mins" "-5.5 -49.5 -4.6"
 	"maxs" "5.5 49.5 4.6"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6263 -1828 397"
 	"mins" "-5 -49.5 -4.6"
 	"maxs" "5 49.5 4.6"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6055 -2098 423"
 	"mins" "-4.5 -49.5 -4"
 	"maxs" "4.5 49.5 4"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6055 -2232 427"
 	"mins" "-4.5 -49.5 -5.5"
 	"maxs" "4.5 49.5 5.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6056 -2376 431"
 	"mins" "-5 -49.5 -3"
 	"maxs" "5 49.5 3"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6053 -2522 429"
 	"mins" "-5 -49.5 -3"
 	"maxs" "5 49.5 3"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6058 -2654 425"
 	"mins" "-5 -49.5 -5"
 	"maxs" "5 49.5 5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6057 -2789 420"
 	"mins" "-5 -49.5 -4"
 	"maxs" "5 49.5 4"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 {
+	"classname" "env_physics_blocker"
 	"origin" "-6055 -2932 407"
 	"angles" "0 0 8"
-	"boxmins" "-5 -49 -4"
-	"boxmaxs" "5 49 4"
 	"mins" "-5 -49 -4"
 	"maxs" "5 49 4"
+	"boxmins" "-5 -49 -4"
+	"boxmaxs" "5 49 4"
 	"initialstate" "1"
 	"BlockType" "0"
-	"classname" "env_physics_blocker"
+	"mapupdate" "1"
 }
 
 
