Began work on c2m2 c2m1 added a ladder to stop infected getting stuck Removed rendercolor from props entity template since it is redundant 99% of the time Removed mapupdate parameter from blockers as it was incorrectly assumed to be necessary for displaying entities with ShowUpdate Updated readme

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -197,7 +197,6 @@ add:
 	"StartDisabled" "1"
 	"targetname" "caralarm_highway_glass_off"
 	"parentname" "caralarm_highway_car"
-	
 }
 ; --- Car lights and sounds
 {
@@ -388,7 +387,6 @@ add:
 	"boxmaxs" "174 60 148"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -397,7 +395,6 @@ add:
 	"maxs" "58 28 156"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Block survivors from standing on the motel roof
 {
@@ -407,7 +404,6 @@ add:
 	"maxs" "1095 293 196"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Block survivors partially climbing back up the drop
 {
@@ -417,7 +413,6 @@ add:
 	"maxs" "36 27 288"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Block jumping onto the cliff leading to the final drop early
 {
@@ -427,7 +422,6 @@ add:
 	"maxs" "167 63 89"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -439,7 +433,6 @@ add:
 	"boxmaxs" "275 78 64"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Block jumping from the outhouse to the tree
 {
@@ -449,7 +442,6 @@ add:
 	"maxs" "27 19.5 663"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Remove shopping cart by the motel and end saferoom that can be exploited
 filter:
@@ -478,7 +470,6 @@ add:
 	"maxs" "62 19 25"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 ; --- Block stuck spot on truck under the bridge
 {
@@ -488,7 +479,6 @@ add:
 	"maxs" "49 32 65"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 
 ; =====================================================
@@ -504,7 +494,6 @@ add:
 	"maxs" "9 33 7"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -513,7 +502,6 @@ add:
 	"maxs" "9 29 7"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 ; --- Clipping on the white taxi by saferoom to make jumping on it easier
 {
@@ -523,7 +511,6 @@ add:
 	"maxs" "8 36 23"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 ; --- Make the door for the smoker pull down at the billboard start open
 modify:
@@ -546,7 +533,6 @@ add:
 	"model" "models/props_vehicles/flatnose_truck_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -555,7 +541,6 @@ add:
 	"model" "models/props_vehicles/longnose_truck_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Clip off car stops to prevent players getting stuck
 {
@@ -565,7 +550,6 @@ add:
 	"maxs" "7 824 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -574,7 +558,6 @@ add:
 	"maxs" "7 208 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -583,7 +566,6 @@ add:
 	"maxs" "436 33 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -592,7 +574,6 @@ add:
 	"maxs" "436 33 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -601,7 +582,6 @@ add:
 	"maxs" "439 11.5 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -610,7 +590,6 @@ add:
 	"maxs" "182 8 3.5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 ; --- Clipping on police car lights
 {
@@ -623,7 +602,6 @@ add:
 	"boxmaxs" "23 11 6"
 	"initialstate" "1"
 	"BlockType" "0"
-	"mapupdate" "1"
 }
 ; --- Billboard to show where skybox blocks off the motel roof by the drop
 {
@@ -633,7 +611,6 @@ add:
 	"model" "models/props_rooftop/billboard03.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 
 
@@ -652,7 +629,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_512_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Right side
 {
@@ -662,7 +638,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_256_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -671,7 +646,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_128_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Foliage
 {
@@ -681,7 +655,6 @@ add:
 	"model" "models/props_foliage/urban_trees_small01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Block survivors standing on the right side shrubs
 {
@@ -691,7 +664,6 @@ add:
 	"maxs" "74 71.5 358"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -703,7 +675,6 @@ add:
 	"boxmaxs" "36.5 67 358"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -712,7 +683,6 @@ add:
 	"maxs" "74 60 342"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Crashed Humvee
 {
@@ -722,7 +692,6 @@ add:
 	"model" "models/props_vehicles/hmmwv.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -731,7 +700,6 @@ add:
 	"model" "models/props_vehicles/hmmwv_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "info_particle_system"
@@ -755,7 +723,6 @@ add:
 	"model" "models/props_foliage/urban_tree_giant02.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -764,7 +731,6 @@ add:
 	"model" "models/props_foliage/urban_trees_cluster02.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Foliage to reduce survivor visibility
 {
@@ -774,7 +740,6 @@ add:
 	"model" "models/props_foliage/urban_trees_small01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -783,7 +748,6 @@ add:
 	"model" "models/props_foliage/urban_trees_dryleaves01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -792,7 +756,6 @@ add:
 	"model" "models/props_foliage/urban_trees_small01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Van behind truck to the left of saferoom
 {
@@ -802,7 +765,6 @@ add:
 	"model" "models/props_vehicles/van.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -811,7 +773,6 @@ add:
 	"model" "models/props_vehicles/van_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Pre-drop highway props
 ; --- Vending machine under stairs
@@ -822,7 +783,6 @@ add:
 	"model" "models/props_office/vending_machine01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Shrub by the police car
 {
@@ -832,7 +792,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Clipping above shrubs
 {
@@ -842,7 +801,6 @@ add:
 	"maxs" "116 104 263"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Grassy area
 {
@@ -852,7 +810,6 @@ add:
 	"model" "models/props_foliage/urban_tree_giant01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -861,7 +818,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -870,7 +826,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_512_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Ambulance on the highway
 {
@@ -880,7 +835,6 @@ add:
 	"model" "models/props_vehicles/ambulance.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Clipping above shrubs
 {
@@ -890,7 +844,6 @@ add:
 	"maxs" "103 116 266"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -899,7 +852,6 @@ add:
 	"maxs" "73 204 275"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -908,7 +860,6 @@ add:
 	"maxs" "37 78 256"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Shrub by the drop after the highway
 {
@@ -918,7 +869,6 @@ add:
 	"model" "models/props_foliage/swamp_shrubwall_block_256_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Clipping above shrubs
 {
@@ -928,7 +878,6 @@ add:
 	"maxs" "63.5 78 330"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -937,7 +886,6 @@ add:
 	"maxs" "23 28 330"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -946,7 +894,6 @@ add:
 	"maxs" "26.5 26 330"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 ; --- Props before the final hill
 {
@@ -956,7 +903,6 @@ add:
 	"model" "models/props_foliage/swamp_rock02.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -965,7 +911,6 @@ add:
 	"model" "models/props_foliage/urban_tree_giant01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- End saferoom props
 {
@@ -975,7 +920,6 @@ add:
 	"model" "models/props_urban/parkinglot_light001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -984,7 +928,6 @@ add:
 	"model" "models/props_vehicles/bus01_2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -993,7 +936,6 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1002,7 +944,6 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1011,7 +952,6 @@ add:
 	"model" "models/props_fortifications/barricade_razorwire001_128_reference.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1020,7 +960,6 @@ add:
 	"model" "models/props_fortifications/barricade_razorwire001_128_reference.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1029,7 +968,6 @@ add:
 	"model" "models/props_urban/fence_cover001_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1038,7 +976,6 @@ add:
 	"model" "models/props_urban/fence_cover001_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1047,7 +984,6 @@ add:
 	"model" "models/props_urban/fence_cover001_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 {
 	"classname" "prop_dynamic"
@@ -1056,7 +992,6 @@ add:
 	"model" "models/props_urban/fence_cover001_256.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Clipping on new barricades
 {
@@ -1066,7 +1001,6 @@ add:
 	"maxs" "129 21 759"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
 }
 
 ; =====================================================
@@ -1157,7 +1091,6 @@ add:
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
 	"disableshadows" "1"
-	"rendercolor" "255 255 255"
 }
 ; --- Block for survivors
 {
@@ -1167,7 +1100,17 @@ add:
 	"maxs" "13 6 50"
 	"initialstate" "1"
 	"BlockType" "1"
-	"mapupdate" "1"
+}
+; --- Infected ladder to stop players getting stuck behind debris after the drop
+{
+	"classname" "func_simpleladder"
+	"origin" "-5562.5 10900 -1398.5"
+	"angles" "0 270 0"
+	"model" "*114"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
 }
 
 
